docs(README.md): update README to provide comprehensive project information including features, installation instructions, API endpoints, and usage examples chore(package.json): add author, version, description, and license information to package.json for better project documentation and clarity

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "wavedb-core",
+  "author": {
+	"name": "Billal Fauzan",
+	"email": "billal.xcode@gmail.com"
+  },
+  "version": "0.0.1",
+  "description": "WaveDB Core - The core API for WaveDB - an open-source metrics evaluation database",
+  "license": "MIT",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
 	"migrate": "prisma migrate dev && prisma generate"
